--- a/src/snippets/core/molecules/line-item.liquid
+++ b/src/snippets/core/molecules/line-item.liquid
@@ -180,7 +180,7 @@
     {%- assign _content = nil -%}
   {%- endcapture -%}
 
-  {%- include 'product-container',
+  {%- include 'container',
     tag: 'div',
     _line_item: _line_item,
     content: _product_container_content,
