--- a/src/snippets/core/molecules/form-add-to-cart.liquid
+++ b/src/snippets/core/molecules/form-add-to-cart.liquid
@@ -63,7 +63,7 @@
       type: 'submit',
       content: 'Add to Cart',
       classes: 'inside-oo-form-add-to-cart',
-      extra_attrs: 'data-add-to-cart-control' -%}
+      extra_attrs: 'data-add-to-cart' -%}
 
   </form>
 
