--- a/src/snippets/core/molecules/quantity-select.liquid
+++ b/src/snippets/core/molecules/quantity-select.liquid
@@ -15,7 +15,7 @@
 
   <div
     class="oo-quantity-select {{ classes -}}"
-    data-quantity-select-control
+    data-quantity-select
     {{ extra_attrs -}}>
 
     {%- include 'button',
