update section type

--- a/src/sections/static/topbar.liquid
+++ b/src/sections/static/topbar.liquid
@@ -2,6 +2,7 @@
 
   {%- include 'topbar' -%}
 
+
 </section>
 
 {% schema %}
@@ -28,7 +29,7 @@
       },
       {
         "name": "Icon w/ Text",
-        "type": "icon-with-text",
+        "type": "icon_with_text",
         "settings": [
           {
             "id": "title",
