--- a/src/snippets/core/atoms/icon.liquid
+++ b/src/snippets/core/atoms/icon.liquid
@@ -1,3 +1,17 @@
+<div class="oo-icon icon-{{- name }} {{ classes -}}" {{ extra_attrs -}}>
+
+  {%- assign _icon_name = name | prepend: 'icon-' -%}
+
+  {%- include 'svg',
+    snippet: _icon_name,
+    classes: 'inside-oo-icon',
+    extra_attrs: '' -%}
+
+  {%- assign _icon_name = nil -%}
+
+</div>
+
+{% comment %}
 {%- capture _arguments -%}
   {%- include 'argument',
     _value: name,
@@ -33,3 +47,4 @@
 {%- endif -%}
 
 {%- assign _errors = nil -%}
+{% endcomment %}
