--- a/src/snippets/core/atoms/input.liquid
+++ b/src/snippets/core/atoms/input.liquid
@@ -1,3 +1,13 @@
+<input
+  class="oo-input input-type-{{- type }} {{ classes -}}"
+  type="{{- type -}}"
+  name="{{- name -}}"
+  value="{{- value -}}"
+  {%- if id != blank -%}id="{{- id -}}"{%- endif -%}
+  {{ extra_attrs -}}>
+
+
+{% comment %}
 {%- capture _arguments -%}
   {%- include 'argument',
     _value: type,
@@ -40,3 +50,4 @@
 {%- endif -%}
 
 {%- assign _errors = nil -%}
+{% endcomment %}
