--- a/src/snippets/core/atoms/grid.liquid
+++ b/src/snippets/core/atoms/grid.liquid
@@ -1,3 +1,16 @@
+<div class="oo-grid {{ classes -}}" {{ extra_attrs -}}>
+
+  {%- assign _items_array = items | remove_first: '-->' | split: '-->' -%}
+  {% for _item in _items_array %}
+
+    {{ _item }}
+
+  {% endfor %}
+  {%- assign _items_array = nil -%}
+
+</div>
+
+{% comment %}
 {%- capture _arguments -%}
   {%- include 'argument',
     _value: items,
@@ -32,3 +45,4 @@
 {%- endif -%}
 
 {%- assign _errors = nil -%}
+{% endcomment %}
