--- a/src/snippets/core/atoms/overlay.liquid
+++ b/src/snippets/core/atoms/overlay.liquid
@@ -1,3 +1,9 @@
+<div
+  class="oo-overlay {{ classes -}}"
+  data-overlay
+  {{ extra_attrs -}}></div>
+
+{% comment %}
 {%- capture _arguments -%}
 {%- endcapture -%}
 
@@ -21,3 +27,4 @@
 {%- endif -%}
 
 {%- assign _errors = nil -%}
+{% endcomment %}
