--- a/src/snippets/core/atoms/svg.liquid
+++ b/src/snippets/core/atoms/svg.liquid
@@ -1,3 +1,10 @@
+<div class="oo-svg {{ classes -}}" {{ extra_attrs -}}>
+
+  {%- include snippet -%}
+
+</div>
+
+{% comment %}
 {%- capture _arguments -%}
   {%- include 'argument',
     _value: snippet,
@@ -26,3 +33,4 @@
 {%- endif -%}
 
 {%- assign _errors = nil -%}
+{% endcomment %}
