--- a/src/snippets/core/molecules/form-search.liquid
+++ b/src/snippets/core/molecules/form-search.liquid
@@ -1,3 +1,44 @@
+<form
+  action="/search"
+  method="get"
+  class="oo-form {{ classes -}}"
+  role="search"
+  data-form="search"
+  {{ extra_attrs -}}>
+
+  {%- capture _extra_attrs -%}
+    placeholder="{%- if placeholder_text != blank -%}{{ placeholder_text }}{%- else -%}search{%- endif -%}"
+  {%- endcapture -%}
+
+  {% include 'input',
+    type: 'search',
+    name: 'q',
+    value: '',
+    classes: 'inside-oo-form-search',
+    extra_attrs: _extra_attrs %}
+
+  {%- assign _extra_attrs = nil -%}
+
+  {% capture _button_content %}
+    {% include 'icon',
+      name: 'search',
+      classes: 'inside-oo-button',
+      value: '',
+      extra_attrs: '' %}
+    <span class="icon__fallback-text">Search</span>
+  {% endcapture %}
+
+  {% include 'button',
+    type: 'submit',
+    content: _button_content,
+    classes: 'inside-oo-form-search',
+    extra_attrs: ''  %}
+
+  {% assign _button_content = nil %}
+
+</form>
+
+{% comment %}
 {%- capture _arguments -%}
   {%- include 'argument',
     _value: placeholder_text,
@@ -61,3 +102,4 @@
 
 {%- assign _errors = nil -%}
 
+{% endcomment %}
