--- a/src/snippets/core/molecules/input-group.liquid
+++ b/src/snippets/core/molecules/input-group.liquid
@@ -1,3 +1,40 @@
+{%- capture _id -%}
+  {{- name | handle -}}-{{- value | handle -}}-{{- 'now' | date: '%N' | modulo: 9999 | plus: 1 -}}
+{%- endcapture -%}
+
+<div class="oo-input-group {{ classes -}}" {{ extra_attrs -}}>
+
+  {%- capture _input_class_string -%}
+    inside-oo-input-group {% if hide_input == true -%}u-visually-hidden{%- endif -%}
+  {%- endcapture -%}
+
+  {%- capture _label_class_string -%}
+    inside-oo-input-group {% if hide_label == true -%}u-visually-hidden{%- endif -%}
+  {%- endcapture -%}
+
+  {%- include 'input',
+    type: type,
+    name: name,
+    value: value,
+    id: _id,
+    classes: _input_class_string,
+    extra_attrs: input_attrs -%}
+
+  {%- assign _input_class_string = nil -%}
+
+  {%- include 'label',
+    for: _id,
+    content: value,
+    classes: _label_class_string,
+    extra_attrs: '' -%}
+
+  {%- assign _label_class_string = nil -%}
+
+  {%- assign _id = nil -%}
+
+</div>
+
+{% comment %}
 {%- capture _arguments -%}
   {%- include 'argument',
     _value: type,
@@ -76,3 +113,4 @@
 {%- endif -%}
 
 {%- assign _errors = nil -%}
+{% endcomment %}
