--- a/src/snippets/core/molecules/row.liquid
+++ b/src/snippets/core/molecules/row.liquid
@@ -1,3 +1,10 @@
+<div class="oo-row {{ classes -}}" {{ extra_attrs -}}>
+
+  {{- content -}}
+
+</div>
+
+{% comment %}
 {%- capture _arguments -%}
   {%- include 'argument',
     _value: content,
@@ -26,3 +33,4 @@
 {%- endif -%}
 
 {%- assign _errors = nil -%}
+{% endcomment %}
