--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   vertical-align: middle;
   margin: 0;
-  padding: $global-size-base ($global-size-base * 1.75);
+  padding: $oo-size-base ($oo-size-base * 1.75);
   text-align: center;
   text-decoration: none;
   white-space: nowrap;
@@ -24,6 +24,6 @@
     background: none;
     padding: 0;
     user-select: text;
-    color: $global-font-color;
+    color: $color-body-text;
   }
 }
