--- a/src/styles/helpers/variables.scss
+++ b/src/styles/helpers/variables.scss
@@ -31,6 +31,12 @@
 //
 // ===========================================================================
 
+  $color-white: #ffffff;
+  $color-black: #000000;
+
+  $color-primary: #0074d9;
+  $color-secondary: #ffdc00;
+
   $color-body-text: var(--color-body-text);
   $color-body: var(--color-main-background);
   $color-accent: var(--color-accent);
