--- a/src/styles/templates/index.scss
+++ b/src/styles/templates/index.scss
@@ -1,5 +1,5 @@
 // Helpers
-@import '../helpers';
+@import '../helpers/index';
 
 // Vendor
-@import '../vendor/slick';
+@import '../vendor/slick/index';
