--- a/src/styles/theme.scss.liquid
+++ b/src/styles/theme.scss.liquid
@@ -5,6 +5,6 @@
 
   Import additional stylesheets into this sheet using CSS imports:
 
-  @import url('../core/form.scss');
+  // @import url('../core/form.scss');
 
 {% endcomment %}
