change filenames waiting for node-sass@5 to use automatic importing of _index.scss files with directory name

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -3,11 +3,10 @@
 @import '~normalize.css/normalize';
 
 // Helpers
-@import './helpers/index';
+@import 'helpers/index';
 
 // Base
-@import './base/index';
+@import 'base/index';
 
 // Global
-@import './global/overlay';
-
+@import 'global/overlay';
