--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -11,3 +11,11 @@
 // Global
 @import './global/overlay';
 
+// Components
+@import './components/modal';
+@import './components/heading';
+@import './components/text';
+
+// Shame
+@import './helpers/shame';
+
