--- a/src/styles/global/overlay.scss
+++ b/src/styles/global/overlay.scss
@@ -1,14 +1,18 @@
-.overlay {
-  display: none;
+.oo-overlay {
+  visibility: hidden;
+  opacity: 0;
   position: fixed;
-  z-index: 1000;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: visibility 0s 300ms, opacity 300ms linear;
 
   &.is-active {
-    display: block;
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 300ms linear;
   }
 }
