--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -9,14 +9,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="canonical" href="{{ canonical_url }}">
 
-    {%- include 'favicon' -%}
+    {%- include 'page-favicon' -%}
 
     {%- include 'page-title' -%}
     {%- include 'page-description' -%}
 
-    {%- include 'social-meta-tags' -%}
+    {%- include 'page-social-meta-tags' -%}
+
     {%- include 'style-tags', layout: 'theme' -%}
-    {%- include 'css-variables' -%}
+    {%- include 'api-css-variables' -%}
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -42,7 +43,7 @@
     {%- endif -%}>
 
 
-    {%- include 'overlay' -%}
+    {%- include 'core-overlay' -%}
 
 
     <main role="main" class="oo-main" id="MainContent">
