--- a/src/snippets/core-overlay.liquid
+++ b/src/snippets/core-overlay.liquid
@@ -3,10 +3,11 @@
   Arguments:
 
   - classes
+  - attrs
 
 {%- endcomment -%}
 
 <div
   class="oo-overlay {{ classes -}}"
   data-overlay
-  {{ extra_attrs -}}></div>
+  {{ attrs -}}></div>
