--- a/src/snippets/components/icon-with-text.liquid
+++ b/src/snippets/components/icon-with-text.liquid
@@ -9,11 +9,12 @@
 
 {% endcomment %}
 
+
 <div class="oo-icon-with-text {{ classes -}}" {{ attrs -}}>
 
-  {%- include 'core-icon', name: icon -%}
+  {%- include 'icon', name: icon -%}
 
-  {{ text }}
+  {{- text -}}
 
 </div>
 
