--- a/src/snippets/components/option-group.liquid
+++ b/src/snippets/components/option-group.liquid
@@ -47,7 +47,7 @@
       oo-option-value swatch-{{- value | handle -}}
     {%- endcapture -%}
 
-    {%- capture extra_attrs -%}
+    {%- capture attrs -%}
       data-option-value
     {%- endcapture -%}
 
