--- a/src/snippets/core/api-css-variables.liquid
+++ b/src/snippets/core/api-css-variables.liquid
@@ -13,6 +13,16 @@
 
 <style>
   :root {
-
+    --color-default-white: {{ settings.color_default_white }};
+    --color-default-black: {{ settings.color_default_black }};
+    --color-default-gray: {{ settings.color_default_gray }};
+    --color-palette-1: {{ settings.color_palette_1 }};
+    --color-palette-2: {{ settings.color_palette_2 }};
+    --color-palette-3: {{ settings.color_palette_3 }};
+    --color-palette-4: {{ settings.color_palette_4 }};
+    --color-palette-5: {{ settings.color_palette_5 }};
+    --color-palette-6: {{ settings.color_palette_6 }};
+    --color-body-text: {{ settings.color_body_text }};
+    --color-body-background: {{ settings.color_body_background }};
   }
 </style>
