--- a/src/styles/base/global.scss
+++ b/src/styles/base/global.scss
@@ -12,7 +12,7 @@ html {
   min-height: 100%; /* [2] */
   -webkit-overflow-scrolling: touch; /* [3] */
   min-width: 320px;
-  background-color: $color-body;
+  background-color: $color-body-background;
 }
 
 body,
