--- a/src/layout/checkout.liquid
+++ b/src/layout/checkout.liquid
@@ -9,20 +9,28 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="canonical" href="{{ canonical_url }}">
 
-    {%- include 'favicon' -%}
+    {%- include 'page-favicon' -%}
 
-    {%- include 'page-title' -%}
-    {%- include 'page-description' -%}
+    <title>{{ page_title }}</title>
 
-    {%- include 'social-meta-tags' -%}
-    {%- include 'style-tags', layout: 'checkout' -%}
-    {%- include 'css-variables' -%}
+    <!-- Header Content ======================================= -->
 
-    {%- include 'api-shop' -%}
+      {{ content_for_header }}
 
-    {% include 'script-tags', layout: 'checkout' %}
+    <!-- Stylesheets ========================================== -->
 
-    {{ content_for_header }}
+      {{ checkout_stylesheets }}
+
+      {%- include 'style-tags', layout: 'checkout' -%}
+      {%- include 'api-css-variables' -%}
+
+    <!-- Scripts ============================================== -->
+
+      {{ checkout_scripts }}
+
+      {%- include 'script-tags', layout: 'checkout' -%}
+      {%- include 'api-shop' -%}
+
   </head>
 
   <body
@@ -31,13 +39,60 @@
     data-alternate-template="{{ template.suffix | handle }}"
     {%- endif -%}>
 
+    {{ skip_to_content_link }}
+
+    <div class="banner" data-header>
+      <div class="wrap">
+        <a href="https://tommyjohn.myshopify.com" class="logo logo--left">
+          <h1 class="logo__text visually-hidden">TommyJohn</h1>
+          {% include 'svg-logo' %}
+        </a>
+      </div>
+    </div>
+
+    {{ order_summary_toggle }}
+
+    <div class="content" data-content>
+      <div class="wrap">
+        <div class="main" role="main">
+          <div class="main__header">
 
 
-    <main role="main" class="oo-main" id="MainContent">
-      {{ content_for_checkout }}
-    </main>
+            <a href="https://tommyjohn.myshopify.com" class="logo logo--left">
+                <h1 class="logo__text visually-hidden">TommyJohn</h1>
+                {% include 'svg-logo' %}
+            </a>
 
 
+            {{ breadcrumb }}
+            {{ alternative_payment_methods }}
+          </div>
+          <div class="main__content">
+            {{ content_for_layout }}
+          </div>
+          <div class="main__footer">
+            {{ content_for_footer }}
+          </div>
+        </div>
+        <div class="sidebar" role="complementary">
+          <div class="sidebar__header">
+
+
+            <a href="https://tommyjohn.myshopify.com" class="logo logo--left">
+                <h1 class="logo__text visually-hidden">TommyJohn</h1>
+                {% include 'svg-logo' %}
+            </a>
+
+
+          </div>
+          <div class="sidebar__content">
+            {{ content_for_order_summary }}
+          </div>
+        </div>
+      </div>
+    </div>
+
+    {{ tracking_code }}
 
   </body>
 </html>
