--- a/src/snippets/core/api-shop.liquid
+++ b/src/snippets/core/api-shop.liquid
@@ -1,4 +1,4 @@
-<script>
+<script data-shop-api>
   document.documentElement.className = document.documentElement.className.replace('no-js', '');
 
   window.bvaccel = {
