--- a/src/styles/base/utility.scss
+++ b/src/styles/base/utility.scss
@@ -59,7 +59,12 @@
 .u-skip-link:focus {
   @include visually-shown(absolute);
   z-index: 10000;
-  background-color: $color-body;
+  background-color: $color-body-background;
   color: $color-body-text;
   transition: none;
+}
+
+.u-dev-control {
+  position: relative;
+  z-index: 1000;
 }
