--- a/src/snippets/add-to-cart-controls.liquid
+++ b/src/snippets/add-to-cart-controls.liquid
@@ -1,26 +1,27 @@
 <div class="debug add-to-cart-controls">
-  {%- include 'button',
-    content: 'Show Overlay',
-    classes: 'button--primary dev-control',
-    attrs: 'data-toggle="[data-overlay]" data-toggle-action="add" data-toggle-animated="true"' -%}
-
-  {%- include 'button',
+  {% include 'button',
     content: 'Toggle Overlay',
     classes: 'button--primary dev-control',
-    attrs: 'data-toggle="[data-overlay]" data-toggle-animated="true"' -%}
+    attrs: 'data-toggle="[data-overlay]" data-toggle-action="toggle" data-toggle-animated="true"' %}
 
   {% include 'button',
     content: 'Toggle Inline Cart',
     classes: 'button--primary dev-control',
-    attrs: 'data-inline-cart="toggle"' %}
+    attrs: 'data-toggle-inline-cart' %}
 
   {% include 'button',
     content: 'Add To Cart',
     classes: 'button--primary dev-control',
     attrs: 'data-add-to-cart' %}
 
+  {%- capture attrs -%}
+    data-remove-from-cart="{{ cart.items[0].key }}"
+  {%- endcapture -%}
+
   {% include 'button',
     content: 'Empty Cart',
     classes: 'button--secondary dev-control',
-    attrs: 'data-empty-cart' %}
+    attrs: attrs %}
+
+  {%- assign attrs = nil -%}
 </div>
